--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,95 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+}
+
+html, body, #map {
+  height: 100%;
+  width: 100%;
+}
+
+h1 {
+  position: absolute;
+  top: 0.2em;
+  left: 0.2em;
+  padding: 0.3em 2em;
+  background-color: rgba(255,255,255,0.8);
+  border-radius: 0.3em;
+  margin: 0;
+  z-index: 1;
+  color: #2c3e50;
+  font-size: 2.7em;
+  font-weight: normal;
+}
+
+#open-form {
+  position: absolute;
+  right: 0.5em;
+  top: 0.2em;
+  font-size: 5em;
+  z-index: 2;
+  border: none;
+  border-radius: 1em;
+  width: 1.2em;
+  height: 1.2em;
+  background-color: rgba(44,62,80,0.8);
+  color: #ecf0f1;
+}
+
+form {
+  display: none;
+  position: absolute;
+  right: 3em;
+  top: 0.5em;
+  z-index: 1;
+  background-color: rgba(255,255,255,0.7);
+  border-radius: 1em;
+  min-width: 20%;
+
+  input {
+    display: block;
+    margin: 0.5em;
+    width: 90%;
+    border: solid rgba(44,62,80,0.2) 1px;
+    border-radius: 0.3em;
+    padding: 0.2em;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5em;
+
+    &:focus {
+      border-color: rgba(44,62,80,0.5);
+    }
+
+    &[type=submit] {
+      width: 93%;
+      background-color: #2c3e50;
+      color: #ecf0f1;
+      font-size: 1.7em;
+    }
+  }
+}
+
+footer {
+  position: absolute;
+  padding: 0.2em;
+  font-size: 11px;
+  background-color: rgba(255,255,255,0.7);
+  margin: 0;
+  z-index: 1;
+  color: #2c3e50;
+  bottom: 0;
+}
+
+.leaflet-control-attribution {
+  color: #2c3e50;
+
+  a {
+    color: #2980b9 !important;
+  }
+}
