--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Tu stages où ?</h1>
+
+<button id="open-form">+</button>
+
+<form action="#" method="post">
+    <input type="text" name="name" value="" tabindex="1" placeholder="Ton nom" />
+    <input type="text" name="company" value="" tabindex="1" placeholder="Ton entreprise" />
+    <input type="text" name="city" value="" tabindex="1" placeholder="La ville de ton entreprise" />
+    <input type="text" name="country" value="" tabindex="1" placeholder="Le pays de ton entreprise" />
+    <input type="submit" value="Envoyer" />
+</form>
+
+<footer class="leaflet-control-attribution">Made with love in 802 - <a href="#">Fork me on GitHub</a></footer>
+
+
+<div id="map"></div>
+
+
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
