ask email instead of name

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,11 +3,11 @@
 <button id="open-form">+</button>
 
 <form action="#" method="post">
-    <input type="text" name="name" value="" tabindex="1" placeholder="Ton nom" />
-    <input type="text" name="company" value="" tabindex="1" placeholder="Ton entreprise" />
-    <input type="text" name="city" value="" tabindex="1" placeholder="La ville de ton entreprise" />
-    <input type="text" name="country" value="" tabindex="1" placeholder="Le pays de ton entreprise" />
-    <input type="submit" value="Envoyer" />
+    <div><input type="text" name="email" value="" tabindex="1" placeholder="jean.dupont" class="half-control" /><small>@telecom-paristech.fr</small></div>
+    <div><input type="text" name="company" value="" tabindex="1" placeholder="Ton entreprise" /></div>
+    <div><input type="text" name="city" value="" tabindex="1" placeholder="La ville de ton entreprise" /></div>
+    <div><input type="text" name="country" value="" tabindex="1" placeholder="Le pays de ton entreprise" /></div>
+    <div><input type="submit" value="Envoyer" /></div>
 </form>
 
 <footer class="leaflet-control-attribution">Made with love in 802 - <a href="#">Fork me on GitHub</a></footer>
