--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -62,7 +62,6 @@ form {
   min-width: 20%;
 
   input {
-    display: block;
     margin: 0.5em;
     width: 90%;
     border: solid rgba(44,62,80,0.2) 1px;
@@ -82,6 +81,15 @@ form {
       color: #ecf0f1;
       font-size: 1.7em;
     }
+
+    &.half-control {
+      width: 50%;
+    }
+  }
+
+  small {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2em;
   }
 }
 
