--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require leaflet
  *= require_tree .
  *= require_self
+ *
+ *= depend_on_asset "layers.png"
+ *= depend_on_asset "layers-2x.png"
  */
