generate User model

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,8 +14,5 @@
 
 
 <div id="map">
-  <%= map(:center => {
-    :latlng => [30, 0],
-    :zoom => 3
-  }) %>
+  <%= map center: { latlng: [30, 0], zoom: 3 } %>
 </div>
