--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -111,3 +111,13 @@ footer {
     color: #2980b9 !important;
   }
 }
+
+.myMarker {
+  background: #f39c12;
+  border: 5px solid rgba(255,255,255,0.5);
+  color: #ecf0f1;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 50%;
+  line-height: 30px;
+}
