print full address in placeholder

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
     <%= f.text_field :company, placeholder: "Google" %>
   </div>
   <div>
-    <%= f.text_field :city, placeholder: "Montain View" %>
+    <%= f.text_field :city, placeholder: "1600 Amphitheatre Pkwy, Mountain View" %>
   </div>
   <div>
     <%= f.text_field :country, placeholder: "USA" %>
