--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,6 +19,7 @@
   <div>
     <%= f.submit 'Envoyer' %>
   </div>
+  <div class="errors"></div>
 <% end %>
 
 <footer class="leaflet-control-attribution">Made with love in 802 - <a href="#">Fork me on GitHub</a></footer>
