--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Tu stages où ?</h1>
 
+<input type="text" id="search" placeholder="Tape le nom d'un ami pour le retrouver" />
+
 <button id="open-form">+</button>
 
 <%= form_for @user, remote: true do |f| %>
