--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -16,9 +16,9 @@ html, body, #map {
 
 h1 {
   position: absolute;
-  top: 0.2em;
-  left: 0.2em;
-  padding: 0.3em 2em;
+  top: 15px;
+  left: 15px;
+  padding: 0.3em 5%;
   background-color: rgba(255,255,255,0.9);
   border-radius: 0.3em;
   margin: 0;
@@ -26,6 +26,8 @@ h1 {
   color: #2c3e50;
   font-size: 2.7em;
   font-weight: normal;
+  width: 20%;
+  text-align: center;
 }
 
 footer {
