display user list

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Tu stages où ?</h1>
 
-<input type="text" id="search" placeholder="Tape le nom d'un ami pour le retrouver" />
+<input type="text" id="searchForm" placeholder="Tape le nom d'un ami pour le retrouver" />
+<div id="userList">
+
+</div>
 
 <button id="open-form">+</button>
 
