--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -83,7 +83,7 @@ input {
   }
 }
 
-#search {
+#searchForm {
   position: absolute;
   top: 5em;
   left: 15px;
@@ -91,4 +91,28 @@ input {
   margin: 0;
   width: 28%;
   padding: 0.2em 1%;
+}
+
+#userList {
+  position: absolute;
+  top: 10.5em;
+  left: 15px;
+  z-index: 2;
+  margin: 0;
+  width: 29%;
+  padding: 0.5%;
+  display: none;
+
+  div {
+    background-color: rgba(255,255,255,0.9);
+    padding: 0.2em;
+    font-size: 1.3em;
+    margin-bottom: 3px;
+    border-radius: 0.5em;
+
+    strong {
+      display: block;
+      font-size: 1.2em;
+    }
+  }
 }
