--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -101,9 +101,8 @@ input {
   margin: 0;
   width: 29%;
   padding: 0.5%;
-  display: none;
 
-  div {
+  .userEntry {
     background-color: rgba(255,255,255,0.9);
     padding: 0.2em;
     font-size: 1.3em;
