display a limited number of user results

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <input type="text" id="searchForm" placeholder="Tape le nom d'un ami pour le retrouver" />
 <div id="userList">
-
+  <div class="moreResults"><output></output> résultat(s) supplémentaire(s)</div>
 </div>
 
 <button id="open-form">+</button>
