--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -102,7 +102,7 @@ input {
   width: 29%;
   padding: 0.5%;
 
-  .userEntry {
+  .userEntry, .moreResults {
     background-color: rgba(255,255,255,0.9);
     padding: 0.2em;
     font-size: 1.3em;
