--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -114,4 +114,9 @@ input {
       font-size: 1.2em;
     }
   }
+
+  .userEntry:hover {
+    cursor: pointer;
+    background-color: rgba(255,255,255,1);
+  }
 }
