--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -7,6 +7,8 @@
   position: absolute;
   right: 0.5em;
   top: 0.2em;
+  font-family: 'Roboto', sans-serif;
+  line-height: 0;
   font-size: 5em;
   z-index: 2;
   border: none;
