media queries for h1 font size

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -30,6 +30,12 @@ h1 {
   text-align: center;
 }
 
+@media screen and (max-width: 1400px) {
+  h1 {
+    font-size: 1.7em;
+  }
+}
+
 footer {
   position: absolute;
   padding: 0.2em;
