fix #2 dead link github

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
   <div class="errors"></div>
 <% end %>
 
-<footer class="leaflet-control-attribution">Made with love in 802 - <a href="#">Fork me on GitHub</a></footer>
+<footer class="leaflet-control-attribution">Made with love in 802 - <a href="https://github.com/allegrem/tu-stages-ou">Fork me on GitHub</a></footer>
 
 
 <div id="map"></div>
