--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -14,6 +14,20 @@ html, body, #map {
   width: 100%;
 }
 
+.flash {
+  position: absolute;
+  top: 0;
+  left: 35%;
+  width: 30%;
+  z-index: 2;
+  text-align: center;
+  background-color: rgba(44,62,80,0.9);
+  color: white;
+  font-size: 1.3em;
+  padding: 0.2em;
+  border-radius: 0% 0% 0.5em 0.5em;
+}
+
 h1 {
   position: absolute;
   top: 15px;
