Fix #5 : perform geocoding client side
Squashed commit of the following:

commit 59f9630241993ea53e252fc3a0917083a28f9730
Author: Matthieu Allegre <matthieu.allegre@gmail.com>
Date:   Sun Jun 15 01:57:53 2014 +0200

    retrieve coordinates server side + remove geocode gem

commit 8d11ac50ea5c12f6820faed004586a4ed0c06aef
Author: Matthieu Allegre <matthieu.allegre@gmail.com>
Date:   Sun Jun 15 01:17:46 2014 +0200

    perform geocoding client-side

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,6 +22,9 @@
     <%= f.text_field :country, placeholder: "USA" %>
   </div>
   <div>
+    <%= f.hidden_field :coordinates %>
+  </div>
+  <div>
     <%= f.submit 'Envoyer' %>
   </div>
   <div class="errors"></div>
