--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -6,7 +6,7 @@ Nom : <%= @user.name %>
 Entreprise : <%= @user.company %>
 Adresse : <%= @user.address %>
 
-Pour modifier ces informations, rends-toi sur <%= root_url %> et remplis de nouveau le formulaire avec la même adresse mail.
+Pour modifier ces informations, rends-toi sur <%= root_url id: @user.id %>.
 
 Si jamais tu n'es pas à l'origine de cette inscription, tu peux supprimer ton compte en visitant l'adresse suivante : <%= destroy_user_url @user %>
 
