--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
     <%= hidden_field_tag 'user[coordinates_str]' %>
   </div>
   <div>
-    <%= hidden_field_tag :id, params[:id] %>
+    <%= hidden_field_tag :token, params[:token] %>
   </div>
   <div>
     <%= f.submit 'Envoyer' %>
