--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,19 @@
 
   ga('create', '<%= ENV['ANALYTICS_UA'] %>', '<%= ENV['ANALYTICS_DOMAIN'] %>');
   ga('send', 'pageview');
+</script>
 
+<button id="feedback">Feedback</button>
+
+<script>
+  UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/o9tKGKwq0dOWAXQkm3F7w.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
+  UserVoice.push(['set', {
+    accent_color: '#448dd6',
+    trigger_color: 'white',
+    trigger_background_color: 'rgba(46, 49, 51, 0.6)'
+  }]);
+  UserVoice.push(['addTrigger', '#feedback', { mode: 'contact' }]);
+  UserVoice.push(['autoprompt', {}]);
 </script>
 
 </body>
