--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -61,6 +61,27 @@ footer {
   bottom: 0;
 }
 
+#feedback {
+  z-index: 10;
+  position: absolute;
+  left: -1.7em;
+  top: 70%;
+  @include transform(rotate(270deg));
+  background-color: #f39c12;
+  color: white;
+  font-size: 1.9em;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  border: none;
+  width: 5em;
+  height: 1.8em;
+
+  &:hover {
+    cursor: pointer;
+    background-color: lighten(#f39c12, 10%);
+  }
+}
+
 .leaflet-control-attribution {
   color: #2c3e50;
 
