--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -49,6 +49,26 @@ form {
     color: #C0392B;
     font-weight: 300;
   }
+
+  .close {
+    position: absolute;
+    right: -0.3em;
+    top: -0.3em;
+    border: none;
+    border-radius: 1em;
+    background-color: rgba(44,62,80,0.8);
+    color: #ecf0f1;
+    font-size: 1.3em;
+    width: 1.3em;
+    height: 1.3em;
+    line-height: 1.3em;
+    text-align: center;
+    font-weight: 500;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 input {
